--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* variables  */
@@ -165,10 +164,14 @@ nav{
 }
 
 .nav-menu-btn i{
-    font-size: ;
+    font-size: 24px;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
 
-} 
+.nav-menu-btn i.active {
+    transform: rotate(90deg);
+}
 
 .active-link{
     position: relative;
